--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+shadowsocksr-libev (2.5.7-1) unstable; urgency=medium
+
+  * Updated the README to reflect the fact that this is shadowsocksR.
+  * Updated paths to reflect that this is shadowsocksR.
+  * Verified that we compile ssr-(local|redir|server) successfully and made changes accordingly.
+  * ssr-(manager|tunnel) have not been verified.
+
+ -- Markus Liljergren <ma****@paradize.org>  Wed, 29 Nov 2017 16:39:23 +0800
+
 shadowsocks-libev (2.5.6-1) unstable; urgency=medium
 
   * Add outbound ACL for server.
